infra/proxy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
spec:
  tls:
  - hosts:
    - www.itmake.world
    secretName: example-app-tls
  rules:
    - host: www.itmake.world
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          - path: /api/course/?(.*)
            pathType: Prefix
            backend:
              service:
                name: course-srv
                port:
                  number: 4000
          - path: /api/purchase/?(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-srv
                port:
                  number: 5000        
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-srv
                port:
                  number: 5000  
          - path: /api/history/?(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-srv
                port:
                  number: 5000  
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 5173  

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.itmake.world'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
